# Sprachassistent

./: .env.all-in-one-pi.example  .env.defaults  .env.desktop-client.example  .env.flowise.example  .env.headscale.example  .env.kokoro.example  .env.mobile.example  .env.n8n.example  .env.optimized  .env.staged-tts.example  .gitignore  .gitmodules  01_restructure.sh  02_patch_imports.sh  03_add_compat_stubs.py  AGENTS.md  CONTRIBUTING.md  Core.js  DEPRECATIONS.md  README.md  TODO-Index.md  TODO_Review.md  UPGRADE_NOTES.md  apply_final_va_fix.sh  apply_va_fix.sh  cli.py  cli.sh  debug_server_start.py  dev-start.sh  env.example  final_server_test.py  init.sh  install_all_nodes.sh  move-to-archive.sh  patch_staged_audiostreamer.diff  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  soundfile.py  (+8 more)
Sprachassistent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
archive/: .env.backup.float_fix  .env.env.backup.1755930207  enhanced_ws_server.py  test_integration.py  ws-server-old.py
archive_legacy/: cli.py  uvicorn
audio/: __init__.py  vad.py
backend/: performance-requirements.txt  performance_monitor.py  performance_test.py
config/: .env.all-in-one-pi.example  .env.desktop-client.example  .env.odroid-server.example  .env.piserver-client.example  setup_env.sh  tts.json
docs/: Build-Anleitung.md  Code-und-Dokumentationsreview.md  GUI-TODO.md  Migration-Guide.md  Projekt-Verbesserungen.md  REFACTOR_PLAN.md  Refaktorierungsplan.md  STAGED_TTS.md  Sofortiger-Aktionsplan.md  TTS-Engine-Switching.md  TTS-TROUBLESHOOTING.md  cli.md  (+13 more)
(+380 files in other folders)
