[project]
name = "Sprachassistent"
version = "0.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["archive*", "voice-assistant-apps*", "tests*", "testsuite*"]


[project.scripts]
va="ws_server.cli:main"

[project.optional-dependencies]
zonos = ["zonos-tts>=0.1.0"]
